--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "license": "MIT",
   "dependencies": {
     "@solana/web3.js": "^1.41.3",
+    "bip39": "^3.0.4",
     "bs58": "^5.0.0"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/metasal1/solanaweb3-examples.git"
